<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/destcard_relativelayout"
    android:layout_width="200dp"
    android:layout_height="150dp"
    android:layout_centerInParent="true"
    android:background="@drawable/dest_card_border">

    <ImageView
        android:id="@+id/destcard_background"
        android:layout_width="200dp"
        android:layout_height="125dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/destcard_background"
        app:srcCompat="@drawable/destcard_back" />

    <TextView
        android:id="@+id/grey_overlay"
        android:layout_width="200dp"
        android:layout_height="125dp"
        android:background="#40000000"
        android:text="" />

    <TextView
        android:id="@+id/destination_list_item_from"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/destination_item_middle"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/destination_list_item_from"
        android:gravity="center"
        android:text="@string/destination_item_middle"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/destination_list_item_to"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/destcard_background"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/destcard_check"
        android:layout_width="200dp"
        android:layout_height="125dp"
        android:contentDescription="@string/destcard_check"
        android:scaleType="fitCenter"
        android:src="@drawable/checkmark"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/destination_list_item_points"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/destcard_background"
        android:background="#927045"
        android:ems="10"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

</RelativeLayout>